IntershipFirstProject/force-app/main/default/objects/Final_cart__c/Final_cart__c.object-meta.xml
<CustomObject>
    <label>Final cart</label>
    <nameField>
        <label>Final cart Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Final carts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>