IntershipFirstProject/force-app/main/default/objects/Final_cart__c/fields/CartID__c.field-meta.xml
<CustomField>
    <fullName>CartID__c</fullName>
    <displayFormat>C-{00000}</displayFormat>
    <label>CartID</label>
    <type>AutoNumber</type>
</CustomField>