IntershipFirstProject/force-app/main/default/objects/Final_cart__c/fields/Order_status__c.field-meta.xml
<CustomField>
    <fullName>Order_status__c</fullName>
    <label>Order status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>cart</fullName>
            </value>
            <value>
                <fullName>submitted</fullName>
            </value>
            <value>
                <fullName>processed</fullName>
            </value>
            <value>
                <fullName>shipped</fullName>
            </value>
            <value>
                <fullName>completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>