IntershipFirstProject/force-app/main/default/objects/Final_cart__c/fields/Total_lines_number__c.field-meta.xml
<CustomField>
    <fullName>Total_lines_number__c</fullName>
    <label>Total lines number</label>
    <summaryForeignKey>Purchased_commodity__c.Final_cart__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>