IntershipFirstProject/force-app/main/default/objects/Final_cart__c/fields/Total_purchase_number__c.field-meta.xml
<CustomField>
    <fullName>Total_purchase_number__c</fullName>
    <label>Total purchase number</label>
    <summarizedField>Purchased_commodity__c.Purchace_quantity__c</summarizedField>
    <summaryForeignKey>Purchased_commodity__c.Final_cart__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>